--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,8 +73,6 @@ dependencies {
     annotationProcessor("androidx.room:room-compiler:2.5.0")
     implementation("androidx.room:room-ktx:2.5.0")
 
-    // mockk
-    testImplementation "io.mockk:mockk:1.13.4"
 
     // unit testing coroutines
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
@@ -101,6 +99,17 @@ dependencies {
     // for generating default ui of exoplayer
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.2'
 
+    //roomDB
+    implementation("androidx.room:room-runtime:2.5.0")
+    annotationProcessor("androidx.room:room-compiler:2.5.0")
+    implementation("androidx.room:room-ktx:2.5.0")
+
+    // mockk
+    testImplementation "io.mockk:mockk:1.13.4"
+
+    // unit testing coroutines
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
